frame/election-provider-support/solution-type/tests/ui/fail/missing_size_bound.stderr
error: Expected binding: `SizeBound = ...`
 --> tests/ui/fail/missing_size_bound.rs:7:2
  |
7 |     frame_support::traits::ConstU32::<10>,
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
